# api-starter-project

./: Dockerfile  README.md  api-starter-project.code-workspace  api-starter.code-workspace  packages.txt  requirements.txt
api-starter/: main.py  pyproject.toml
api-starter/config/: api_logging.py  error_messages.py  finish_calls.py  uvicorn_config.py
api-starter/routes/default_routes/: __init__.py  favicon.py  healthcheck.py  swagger.py
api-starter/static/healthcheck/: index.html
